# watermark-studio

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  benchmarks.md  quickstart.md  ui_prompt.md
examples/: axolotl_star_mask.json  demo_polygon_mask.json
macos/WatermarkStudio/: Package.swift
macos/WatermarkStudio/Sources/WatermarkStudioMac/: WatermarkStudioApp.swift
macos/WatermarkStudio/Tests/WatermarkStudioMacTests/: WatermarkStudioMacTests.swift
scripts/: bootstrap_propainter.sh  package_mac_app.sh
src/watermark_studio/: __init__.py  cli.py  mask.py  media.py  propainter.py
tests/: test_cli.py  test_mask.py  test_propainter.py
