[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "watermark-studio"
version = "0.1.0"
description = "Remove Veo, Gemini, and AI-generated video watermarks with a Python CLI, macOS app, and video inpainting backend adapter."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Watermark Studio Contributors" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Video",
]
dependencies = [
  "opencv-python-headless>=4.8",
  "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[project.scripts]
watermark-studio = "watermark_studio.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
